--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,128 @@
-body{
-    background-color: olive;
+*{
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    background-color: black;
+    font-family: 'Raleway', sans-serif;
 }
 
-h1{
-    color: red;
+.name{
+    cursor: pointer;
+    font-size: 30px;
 }
 
-h2{
-    color: orangered;
+
+li, a{
+    font-family: 'Raleway', sans-serif;
+    font-weight: 500;
+    font-size: 20px;
+    color: #edf0f1;
+    text-decoration: none;
+}
+
+header{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 30px 10%;
+}
+
+.nav_links{
+    list-style: none;
+}
+
+.nav_links li{
+    display: inline-block;
+    padding: 0px 20px;
+}
+
+.nav_links li a{
+    transition: all .3s ease 0s;
+}
+
+.nav_links li a:hover{
+    color: #0088a9;
+}
+
+.line {
+  align-items: center;
+  height: 1px;
+  margin-left: 30px;
+  margin-right: 30px;
+  background: linear-gradient(to right, transparent, #edf0f1, transparent);
+}
+
+.main{
+    margin-top: 50px;
+}
+
+.main img{
+    max-width: 300px;
+    border-radius: 10px;
+}
+
+.pro1{
+    font-family: 'Raleway', sans-serif;
+    display: flex;
+    width: 1200px;
+    margin: 0 auto;
+    margin-top: 50px;
+    justify-content: space-between;
+    align-items: center;
+    color: #edf0f1;
+    transition: all .3s ease 0s;
+    cursor: pointer;
+}
+
+
+
+.pro1:hover{
+    transition: all .3s ease 0s;
+    transform: scale(1.05);
+    box-shadow: 0 0 0 2px #000000;
+}
+
+.pro_text{
+    font-size: 16px;
+    margin-left: 30px;
+    text-align: justify;
+    text-justify: auto;
+}
+
+.pro_text:hover > h2{
+    transition: all .3s ease 0s;
+    color: #0088a9;
+}
+
+footer{
+   display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 50px 10%;
+    bottom: 0;
+    position: relative;
+    margin-top: 50px;
+    width: 100%;
+    height: 1rem; 
+}
+
+footer li{
+    color: #edf0f1;
+}
+
+.social_links{
+    list-style: none;
+}
+
+.social_links li{
+    display: inline-block;
+    padding: 0px 20px;
+}
+
+.social_links li a{
+    transition: all .3s ease 0s;
+}
+
+.social_links li a:hover{
+    color: #0088a9;
 }
